--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "vite-plugin-pwa": "^0.19.8",
+        "workbox-window": "^7.1.0"
     },
     "dependencies": {
         "@heroicons/react": "^2.1.3",
