--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "embla-carousel-react": "^8.0.2",
         "input-otp": "^1.2.4",
         "lucide-react": "^0.372.0",
+        "moment": "^2.30.1",
         "next-themes": "^0.3.0",
         "react-day-picker": "^8.10.1",
         "react-hook-form": "^7.51.3",
